- Voucher Unhide - Change POST method create Assets - Voucher Layout

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,6 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:focusableInTouchMode="true"
+            android:layout_marginTop="@dimen/med_padding"
             android:orientation="vertical">
 
             <android.support.design.widget.TextInputLayout
