--- a/app/src/main/res/layout/aset_item_view_backup.xml
+++ b/app/src/main/res/layout/aset_item_view_backup.xml
@@ -78,41 +78,46 @@
                     android:layout_toEndOf="@+id/as_thumb_aset"
                     android:orientation="vertical">
 
-                    <LinearLayout
+                    <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
+                        android:layout_height="wrap_content">
 
                         <TextView
                             android:id="@+id/as_mark_det"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="bottom"
-                            android:layout_weight="1"
                             android:padding="@dimen/xmin_padding"
                             android:text="TextView"
                             android:lines="2"
                             android:textSize="18sp"
                             android:textStyle="bold"
-                            android:textColor="@color/colorBlack"
-                            tools:text="Suzuki Ertiga" />
+                            tools:text="SUZUKI ERTIGA" />
 
-                        <TextView
-                            android:id="@+id/as_status_det"
-                            android:layout_width="100dp"
-                            android:layout_height="wrap_content"
-                            android:gravity="bottom|end"
-                            android:layout_weight="0"
-                            android:padding="@dimen/xmin_padding"
-                            android:text="Aktif"
-                            android:textAlignment="center"
-                            android:background="@color/colorGreenRe"
-                            android:textColor="@color/colorWhite"
-                            android:textSize="@dimen/calendar_text_small"
-                            android:textStyle="bold" />
+                        <ImageView
+                            android:id="@+id/as_verif"
+                            android:layout_width="18dp"
+                            android:layout_height="18dp"
+                            android:layout_centerVertical="true"
+                            android:src="@drawable/verif_blue_24"
+                            android:layout_marginLeft="@dimen/xmin_padding"
+                            android:layout_toEndOf="@id/as_mark_det"
+                            android:layout_alignBottom="@id/as_mark_det"
+                            android:layout_marginBottom="@dimen/min_padding"
+                            android:visibility="gone"
+                            />
+                    </RelativeLayout>
 
-                    </LinearLayout>
+                    <TextView
+                        android:id="@+id/as_year_det"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_toEndOf="@+id/as_harga_thumb"
+                        android:paddingBottom="@dimen/xmin_padding"
+                        android:paddingStart="@dimen/xmin_padding"
+                        android:textColor="@color/colorPrice"
+                        android:textSize="@dimen/small_text"
+                        tools:text="2017" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -124,64 +129,27 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
+                            android:layout_weight="1"
                             android:background="@color/colorPrimarySoft"
                             android:padding="@dimen/xmin_padding"
                             android:textAlignment="center"
-                            android:textStyle="bold"
-                            android:textColor="@color/colorPrimary"
+                            android:textColor="@color/colorBlack"
                             android:textSize="@dimen/calendar_text_small"
                             tools:text="Classic" />
 
                         <TextView
+                            android:id="@+id/as_status_det"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:background="@color/colorPrimarySoft"
-                            android:textAlignment="center"
-                            android:textStyle="bold"
-                            android:textColor="@color/colorPrimary"
-                            android:textSize="@dimen/calendar_text_small"
-                            tools:text="|" />
-
-                        <TextView
-                            android:id="@+id/as_year_det"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_toEndOf="@+id/as_harga_thumb"
-                            android:paddingBottom="@dimen/xmin_padding"
-                            android:paddingStart="@dimen/xmin_padding"
-                            android:textColor="@color/colorPrimary"
-                            android:textStyle="bold"
-                            android:textSize="@dimen/small_text"
-                            tools:text="2017" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_weight="0"
+                            android:layout_toEndOf="@+id/as_status_text"
+                            android:layout_weight="1"
+                            android:background="@color/calendar_active_month_bg"
                             android:padding="@dimen/xmin_padding"
-                            android:textAlignment="textStart"
-                            android:textColor="@color/colorGrey"
+                            android:text="Aktif"
+                            android:textAlignment="center"
+                            android:textColor="@color/colorPrimaryDark"
                             android:textSize="@dimen/calendar_text_small"
-                            tools:text="Terverifikasi" />
-
-                        <ImageView
-                            android:id="@+id/as_verif"
-                            android:layout_width="18dp"
-                            android:layout_height="18dp"
-                            android:layout_weight="0"
-                            android:layout_centerVertical="true"
-                            android:src="@drawable/ic_check_green"
-                            android:layout_gravity="center_vertical"
-                            android:visibility="gone"
-                            />
+                            android:textStyle="bold" />
 
                     </LinearLayout>
 
