--- a/app/src/main/res/layout/content_critic_suggestion.xml
+++ b/app/src/main/res/layout/content_critic_suggestion.xml
@@ -35,7 +35,7 @@
                     android:id="@+id/textView36"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Kategori Aset"
+                    android:text="@string/klasifikasi_aset"
                     android:textColor="@color/colorBlack" />
 
                 <LinearLayout
