--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -105,9 +105,7 @@
                 android:orientation="horizontal"
                 android:paddingBottom="@dimen/min_padding"
                 android:paddingLeft="@dimen/min_padding"
-                android:paddingRight="@dimen/min_padding"
-
-                >
+                android:paddingRight="@dimen/min_padding">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -143,6 +141,154 @@
 
             </LinearLayout>
 
+            <!--verif email-->
+            <LinearLayout
+                android:id="@+id/verify_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/xmin_padding"
+                android:background="@color/colorDanger"
+                android:orientation="horizontal"
+                android:paddingBottom="@dimen/min_padding"
+                android:paddingTop="@dimen/min_padding"
+                android:paddingLeft="@dimen/min_padding"
+                android:paddingRight="@dimen/min_padding"
+                android:visibility="gone">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:layout_gravity="center_vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:paddingLeft="10dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:text="Email anda belum terverifikasi "
+                        android:textColor="@color/colorWhite"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/xmin_padding"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/uv_email"
+                            android:layout_width="wrap_content"
+                            android:paddingLeft="10dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:text="mail@mail.com"
+                            android:textColor="@color/colorWhite"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+
+                        <ImageView
+                            android:id="@+id/btn_edit_email"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="@dimen/min_padding"
+                            android:src="@drawable/ic_edit_white_18dp"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/btn_email_verify"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorGreenRe"
+                    android:linksClickable="true"
+                    android:textSize="16sp"
+                    android:padding="@dimen/xmin_padding"
+                    android:layout_gravity="center_vertical"
+                    android:text="Verifikasi"
+                    android:textColor="@color/colorWhite"
+                    android:textStyle="bold"/>
+
+            </LinearLayout>
+
+            <!--verif phone-->
+            <LinearLayout
+                android:id="@+id/verify_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/xmin_padding"
+                android:background="@color/colorDanger"
+                android:orientation="horizontal"
+                android:paddingBottom="@dimen/min_padding"
+                android:paddingTop="@dimen/min_padding"
+                android:paddingLeft="@dimen/min_padding"
+                android:paddingRight="@dimen/min_padding"
+                android:visibility="gone">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:layout_gravity="center_vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:paddingLeft="10dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:text="No. HP anda belum terverifikasi "
+                        android:textColor="@color/colorWhite"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/xmin_padding"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/uv_phone"
+                            android:layout_width="wrap_content"
+                            android:paddingLeft="10dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:text="+62800000000"
+                            android:textColor="@color/colorWhite"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+
+                        <ImageView
+                            android:id="@+id/btn_edit_phone"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="@dimen/min_padding"
+                            android:src="@drawable/ic_edit_white_18dp"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/btn_phone_verify"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorGreenRe"
+                    android:linksClickable="true"
+                    android:textSize="16sp"
+                    android:padding="@dimen/xmin_padding"
+                    android:layout_gravity="center_vertical"
+                    android:text="Verifikasi"
+                    android:textColor="@color/colorWhite"
+                    android:textStyle="bold"/>
+
+            </LinearLayout>
+
             <LinearLayout
                 android:id="@+id/account_data_verif_notif"
                 android:layout_width="match_parent"
@@ -151,8 +297,7 @@
                 android:background="@color/colorOrangeSoft"
                 android:orientation="horizontal"
                 android:padding="@dimen/xmin_padding"
-                android:visibility="gone"
-                >
+                android:visibility="gone">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -178,10 +323,9 @@
                     android:layout_height="30dp"
                     android:layout_gravity="center_vertical"
                     android:padding="@dimen/xmin_padding"
-                    app:srcCompat="@android:drawable/ic_dialog_info" />
+                    app:srcCompat="@drawable/ic_info_blue_24dp" />
 
             </LinearLayout>
-
 
             <!--head breadsrumb-->
 
