--- a/app/src/main/res/layout/content_form_delivery_price.xml
+++ b/app/src/main/res/layout/content_form_delivery_price.xml
@@ -160,8 +160,7 @@
                         android:layout_height="wrap_content"
                         android:background="@color/colorNearWhite"
                         android:ems="10"
-                        android:hint="E.g. 10"
-                        android:text="1"
+                        android:hint="0"
                         android:inputType="number"
                         android:imeOptions="actionNext"
                         android:padding="@dimen/min_padding" />
@@ -196,7 +195,7 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:visibility="gone">
+                    >
 
                     <EditText
                         android:id="@+id/distance_free"
@@ -204,8 +203,7 @@
                         android:layout_height="wrap_content"
                         android:background="@color/colorNearWhite"
                         android:ems="10"
-                        android:hint="E.g. 10"
-                        android:text="1"
+                        android:hint="0"
                         android:inputType="number"
                         android:imeOptions="actionNext"
                         android:padding="@dimen/min_padding" />
