--- a/app/src/main/res/layout/grid_voucher_catalog.xml
+++ b/app/src/main/res/layout/grid_voucher_catalog.xml
@@ -15,50 +15,82 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
             android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/item_img"
-                    android:layout_width="@dimen/msg_thumb_width"
-                    android:layout_height="@dimen/msg_thumb_height"
+                    android:layout_width="@dimen/thumb_width"
+                    android:layout_height="@dimen/thumb_height"
                     android:layout_marginTop="@dimen/min_padding"
                     app:srcCompat="@drawable/img_default" />
 
-                <TextView
-                    android:id="@+id/item_name"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:padding="@dimen/xmin_padding"
-                    android:text="Voucher Name"
-                    android:textAlignment="center"
-                    android:layout_marginTop="@dimen/xmin_padding"
-                    android:textSize="@dimen/under_small_text" />
+                    android:orientation="vertical"
+                    android:layout_marginTop="@dimen/min_padding"
+                    android:layout_marginLeft="@dimen/min_padding">
 
-                <TextView
-                    android:id="@+id/item_price"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="50000"
-                    android:textAlignment="center"
-                    android:textSize="@dimen/under_small_text" />
+                    <TextView
+                        android:id="@+id/item_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="@dimen/xmin_padding"
+                        android:text="Voucher Name"
+                        android:textColor="@color/colorPrimary"
+                        android:textStyle="bold"
+                        android:textSize="@dimen/medium_text" />
 
-            <TextView
-                android:id="@+id/btn_buy"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="@dimen/xmin_padding"
-                android:text="Beli"
-                android:layout_marginTop="@dimen/min_padding"
-                android:background="@color/colorPrimary"
-                android:textAlignment="center"
-                android:textColor="@color/colorWhite"
-                android:textStyle="bold"
-                android:textSize="@dimen/small_text"
-                android:clickable="true"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/price_img"
+                            android:layout_width="16dp"
+                            android:layout_height="16dp"
+                            android:layout_marginTop="@dimen/min_padding"
+                            app:srcCompat="@drawable/point_rentist" />
+
+                        <TextView
+                            android:id="@+id/item_price"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:padding="@dimen/xmin_padding"
+                            android:textColor="@color/colorBlack"
+                            android:text="50000"
+                            android:textSize="@dimen/small_text" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="right">
+
+                        <TextView
+                            android:id="@+id/btn_buy"
+                            android:layout_width="120dp"
+                            android:layout_height="30dp"
+                            android:layout_marginTop="@dimen/min_padding"
+                            android:background="@color/colorGreenRe"
+                            android:clickable="true"
+                            android:text="Beli"
+                            android:textAlignment="center"
+                            android:textColor="@color/colorWhite"
+                            android:textSize="@dimen/medium_text"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+
+                </LinearLayout>
+            </LinearLayout>
 
         </LinearLayout>
 
